--- a/rpg.css
+++ b/rpg.css
@@ -136,9 +136,43 @@ body {
   /* background: linear-gradient(to bottom, #3e271a, #a68b60, #e0cda7, #a68b60, #3e271a); */
 }
 
+/* Action buttons */
+
 #controls {
   text-align: center;
-  margin:  0 auto;
+  margin:  10px auto;
+  background: linear-gradient(#fecc4c, #ffac33);
+  padding: 0;
+}
+
+#controls button {
+  margin: 0;
+  padding: 5px;
+  font-family: 'sedan sc', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  display: inline-block;
+  font-size: 24px;
+  background-color: #feac32;
+  border: none;
+}
+
+#controls button:hover {
+  background-color: #6d4d1d;
+  color: #fff;
+  background: none;}
+
+#controls button:active {
+  margin: 0;
+  color: #000000;
+  padding: 5px;
+  font-family: 'sedan sc', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  display: inline-block;
+  font-size: 24px;
+  background-color: #feac32;
+  border: none;
 }
 
 #controls,
