--- a/rpg.css
+++ b/rpg.css
@@ -1,11 +1,11 @@
-/* Import Google Fonts */
+/* Import Google Fonts here */
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Jaini&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Junge&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
 
-/* Responsive styles for screens narrower than 600px */
 @media only screen and (max-width: 600px) {
+  /* Add your responsive styles here */
   body {
     margin: 0;
   }
@@ -16,9 +16,9 @@
 
   .alertText {
     top: 10%;
-    left: 5%;
-    width: 90%;
-    font-size: 3.2vw; /* Responsive font size */
+    left: 5%; /* Adjust left positioning for smaller screens */
+    width: 90%; /* Adjust width for smaller screens */
+    font-size: 24px; /* Adjust font size for smaller screens */
   }
 
   #game {
@@ -35,7 +35,7 @@
   }
 
   .stats {
-    padding-right: 0.5rem;
+    padding-right: 5px;
   }
 
   #dragon {
@@ -48,7 +48,7 @@
 
   input[type="text"],
   button[type="button"] {
-    margin-top: 0.5rem;
+    margin-top: 5px;
   }
 
   .nameInput {
@@ -57,11 +57,11 @@
   }
 
   #playerNameDisplay {
-    font-size: 1.25rem;
+    font-size: medium;
   }
 
   .introText {
-    font-size: 0.875rem;
+    font-size: small;
   }
 }
 
@@ -109,16 +109,17 @@ body {
 }
 
 /* Monster textAlert */
+
 .alertText {
   position: absolute;
   top: 20%;
   left: 18%;
-  width: 50vw;
+  width: 400px;
   animation: blurIn .5s forwards, shake 2s 1s, shake 2s 1s, blurOut 1s 2s forwards;
   font-family: "Bungee Spice", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 5vw; /* Responsive font size */
+  font-size: 72px;
   z-index: 10000;
 }
 
@@ -130,12 +131,16 @@ body {
 #game {
   padding: 10px;
   margin: auto;
-  width: 80vw;
+  width: 500px;
+/*  background-color: #f7deb8; */
+  /* background: linear-gradient(to bottom, #3e271a, #a68b60, #e0cda7, #a68b60, #3e271a); */
 }
+
+/* Action buttons */
 
 #controls {
   text-align: center;
-  margin: 10px auto;
+  margin:  10px auto;
   background: linear-gradient(#fecc4c, #ffac33);
   padding: 0;
 }
@@ -143,11 +148,11 @@ body {
 #controls button {
   margin: 0;
   padding: 5px;
-  font-family: 'Sedan SC', sans-serif;
+  font-family: 'sedan sc', sans-serif;
   font-weight: 400;
   font-style: normal;
   display: inline-block;
-  font-size: 2vw; /* Responsive font size */
+  font-size: 24px;
   background-color: #feac32;
   border: none;
 }
@@ -155,18 +160,17 @@ body {
 #controls button:hover {
   background-color: #6d4d1d;
   color: #fff;
-  background: none;
-}
+  background: none;}
 
 #controls button:active {
   margin: 0;
   color: #000000;
   padding: 5px;
-  font-family: 'Sedan SC', sans-serif;
+  font-family: 'sedan sc', sans-serif;
   font-weight: 400;
   font-style: normal;
   display: inline-block;
-  font-size: 2vw; /* Responsive font size */
+  font-size: 24px;
   background-color: #feac32;
   border: none;
 }
@@ -194,7 +198,7 @@ body {
 }
 
 .stat {
-  padding-right: 1rem;
+  padding-right: 10px;
 }
 
 button {
@@ -212,11 +216,11 @@ button {
 }
 
 .testmode {
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+    color: #ffffff;
+    display: flex; /* Use flexbox to align contents next to each other */
+    justify-content:center; /* Align contents with space between them */
+    align-items:center; /* Align contents vertically in the center */
+  }
 
 #testmode {
   display: none;
@@ -230,7 +234,7 @@ button {
 
 input[type="text"],
 button[type="button"] {
-  margin-top: 1rem;
+  margin-top: 10px;
 }
 
 .nameInput {
@@ -238,8 +242,9 @@ button[type="button"] {
   color: #0a0a23;
 }
 
+/* Fallback font */
 .jaini-regular {
-  font-family: 'Jaini', sans-serif;
+  font-family: 'Jaini', sans-serif; /* Use 'Jaini' font if available, otherwise use a generic sans-serif font */
   font-weight: 400;
   font-style: normal;
 }
@@ -253,7 +258,7 @@ button[type="button"] {
 #playerNameDisplay {
   font-family: 'Jaini', sans-serif;
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: large;
 }
 
 #playerImage {
@@ -272,6 +277,8 @@ button[type="button"] {
   width: 80%;
   text-align: center;
 }
+
+/* Slide out menu for testing options and reset */
 
 .toolsMenu {
   position: fixed;
